--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,5 +15,6 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "gitHead": "20051b6754b50e3d56d583e97e5a2d5f54c54d28"
 }
