--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -6,6 +6,9 @@
   "homepage": "",
   "license": "ISC",
   "main": "lib/code.js",
+  "bin": {
+    "rigger-cli":"bin/index.js"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,5 +21,6 @@
   },
   "dependencies": {
     "@rigger-cli/utils": "^1.0.1"
-  }
+  },
+  "gitHead": "20051b6754b50e3d56d583e97e5a2d5f54c54d28"
 }
