--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,5 +16,8 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "gitHead": "20051b6754b50e3d56d583e97e5a2d5f54c54d28"
+  "gitHead": "20051b6754b50e3d56d583e97e5a2d5f54c54d28",
+  "publishConfig": {
+    "access": "public"
+  }
 }
