--- a/utils/utils/package.json
+++ b/utils/utils/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@rigger-cli/code",
+  "name": "@rigger-cli/utils",
   "version": "1.0.2",
-  "description": "rigger-cli core",
+  "description": "> TODO: description",
   "author": "杜金银 <jinyin.du@weimob.com>",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/code.js",
-  "bin": {
-    "rigger-cli": "bin/index.js"
-  },
+  "main": "lib/utils.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -19,11 +16,14 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "dependencies": {
-    "@rigger-cli/utils": "^1.0.2"
-  },
   "gitHead": "20051b6754b50e3d56d583e97e5a2d5f54c54d28",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "colors": "^1.4.0",
+    "root-check": "^2.0.0",
+    "semver": "^7.3.5",
+    "user-home": "^3.0.0"
   }
 }
