--- a/utils/get-npm-info/package.json
+++ b/utils/get-npm-info/package.json
@@ -27,5 +27,6 @@
     "axios": "^0.21.1",
     "semver": "^7.3.5",
     "url-join": "^4.0.1"
-  }
+  },
+  "gitHead": "966428c67b3be0c3bfa4d63d985431f3757032c8"
 }
